Adding controllers for Course and Projects. Added routes for getting all available courses, getting all currently enrolled courses, and getting all projects for a course.

--- a/TimeSlice/Views/Account/Login.cshtml
+++ b/TimeSlice/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
     @{ 
         if (Model.valid == false)
         {
-            <span>Username or password waas incorrect.</span>
+            <span>Username or password was incorrect.</span>
         }
     }
     <div>
