--- a/TimeSlice/Views/Shared/_Layout.cshtml
+++ b/TimeSlice/Views/Shared/_Layout.cshtml
@@ -31,12 +31,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Course" asp-action="All">All Courses</a></li>
+                    <li><a asp-area="" asp-controller="Course" asp-action="MyCourses">My Courses</a></li>
                 </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Context.Session.GetString("username")</li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
                 </ul>
             </div>
         </div>
