--- a/TimeSlice/Views/_ViewImports.cshtml
+++ b/TimeSlice/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using TimeSlice
 @using TimeSlice.Models
 @using TimeSlice.ViewModels
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
