Fixed "All courses" view

--- a/TimeSlice/Views/Courses/AllCourses.cshtml
+++ b/TimeSlice/Views/Courses/AllCourses.cshtml
@@ -7,7 +7,7 @@
 <h1>All Courses</h1>
 <div>
     <table cellpadding="5">
-        @foreach (var courseInstructor in Model)
+        @foreach (CourseInstructorModel courseInstructor in Model)
          {
             <tr>
                 <td>
