--- a/TimeSlice/Views/Courses/AllCourses.cshtml
+++ b/TimeSlice/Views/Courses/AllCourses.cshtml
@@ -2,14 +2,16 @@
 
 @{
     ViewData["Title"] = "All Courses";
+    var counter = 0;
 }
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 <h1>All Courses</h1>
 <div>
     <table cellpadding="5">
         @foreach (CourseInstructorModel courseInstructor in Model)
          {
-            <tr>
+            <tr id=@courseInstructor.courseId>
                 <td>
                     <div>
                         <span>
@@ -22,12 +24,26 @@
                             @courseInstructor.instructorLastName
                         </span>
                         <span>
-                            <button>Register for Course</button>
+                            <button onclick="Register(@courseInstructor.courseId)">Register for Course</button>
                         </span>
                     </div>
                 </td>
             </tr>
-         }
+            counter++;
+        }
     </table>
 </div>
 
+<script type="text/javascript">
+    function Register(id) {
+        console.log(id);
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState === 4 && this.status === 200) {
+                console.log('done');
+            }
+        };
+        xhttp.open("POST", "/Course/Register/" + id, true);
+        xhttp.send();
+    }
+</script>
