--- a/TimeSlice/Views/Shared/_Layout.cshtml
+++ b/TimeSlice/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Course" asp-action="All">All Courses</a></li>
                     <li><a asp-area="" asp-controller="Course" asp-action="MyCourses">My Courses</a></li>
+                    <li><a asp-area="" asp-controller="Notification" asp-action="Notifications">Notifications</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
